# cavelight

./: .gitattributes  .gitignore  .lfsconfig  CLAUDE.md  Cargo.toml  README.md
assets/: dialogues.ron  entity_definitions.ron  item_definitions.ron  sprite_animations.ron
src/: aim.rs  arrow.rs  camera.rs  campfire.rs  chest.rs  damageable.rs  dialogue.rs  door.rs  entity.rs  fps_counter.rs  goap.rs  grid_mover.rs  input.rs  interaction.rs  interaction_reticle.rs  inventory.rs  item.rs  ladder.rs  main.rs  menu.rs  npc.rs  player_input.rs  save.rs  signpost.rs  skeleton.rs  spawner.rs  sprite_animation.rs  wander.rs
src/level/: generator.rs  mod.rs  tile.rs
