[package]
name = "cavelight"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.6.1"
bevy = "0.18.1"
bevy-inspector-egui = "0.36.0"
bevy_common_assets = { version = "0.15", features = ["ron"] }
bevy_light_2d = "0.9.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Used in sprite_animation tests to deserialize RON without a Bevy app.
ron = "0.11"

[profile.dev.package."*"]
opt-level = 3
