[package]
name = "cavelight"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.6.1"
bevy = "0.18.1"
bevy-inspector-egui = "0.36.0"
bevy_common_assets = { version = "0.15", features = ["ron"] }
bevy_light_2d = "0.9.0"
dirs = "5"
rand = "0.8"
ron = "0.11"
serde = { version = "1", features = ["derive"] }

[profile.dev]
# Slightly optimize game code in dev mode — eliminates iterator overhead, inlining,
# etc. without significantly hurting compile times. Dependencies stay at 3.
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
